Update UI / fix bug

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 
 @import "tailwindcss";
 body {
+  overflow-x: hidden;
+  width: 100%;
+  position: relative;
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
