--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,14 @@ body {
   color: rgba(255, 255, 255, 0.87);
   background-color: #000000;
 }
+@keyframes mobileGlowStrong {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 250% 50%;
+  }
+}
 
 @font-face {
   font-family: f1;
