Update UI / fix bug

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,21 @@ body {
     background-position: 250% 50%;
   }
 }
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.animate-gradient {
+  animation: gradient 10s linear infinite;
+}
 
 @font-face {
   font-family: f1;
